--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
 		"preview": "nuxt preview",
-		"postinstall": "nuxt prepare"
+		"postinstall": "nuxt prepare",
+		"lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
+		"lint:fix": "eslint --ext .js,.ts,.vue --ignore-path .gitignore --fix ."
 	},
 	"devDependencies": {
 		"@nuxtjs/eslint-module": "^4.1.0",
 		"@nuxtjs/tailwindcss": "^6.10.3",
+		"@typescript-eslint/eslint-plugin": "^6.17.0",
+		"@typescript-eslint/parser": "^6.17.0",
+		"eslint": "^8.56.0",
+		"eslint-plugin-vue": "^9.19.2",
 		"nuxt": "^3.9.0",
+		"prettier": "^3.1.1",
+		"typescript": "^5.3.3",
 		"vue": "^3.4.3",
 		"vue-router": "^4.2.5"
 	},
